2005-12-02  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc: fix guess_year for month boundary.
	* ftpclass.cc: another fix for sun c++ compiler.
	* lftp_tinfo.cc: use termcap.h if available and no curses; fix usage of tgetstr.

2005-11-30  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: add --max-errors option.
	* SFtp.cc, SFtp.h: add support for sftp version 5 and 6.

2005-11-29  Alexander V. Lukyanov <lav@yars.free.net>

	* CatJob.cc: use DEFAULT_PAGER.
	* FileCopy.cc, FileCopy.h: add suggested_filename member; copy it
	  from get to put; add auto_rename member; prepare for automatic renaming.
	* ftpclass.cc: fix compilation with Sun comiler.

2005-11-22  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: set handshake_done for openssl - this fixes IOBufferSSL::Done().

2005-11-21  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h: add new filtering modes - SubtractNewerThan,
	  SubtractSizeOutside.
	* MirrorJob.cc, MirrorJob.h: add --size-range and --older-than options.
	* ResMgr.cc, ResMgr.h: change Range to use long long; fixed a bug with
	  start/end reversed.

2005-11-18  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: allow PROT command to be used
	  after CCC; issue PROT before CCC if all transfers has to be
	  protected; open data ssl layer when PROT=P even after CCC.

2005-11-17  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, buffer.h: move doubling of IAC to proper level,
	  that is do it in IOBufferTelnet.

2005-11-11  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fixed handling of 334 reply to AUTH command.

2005-11-10  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fix compilation without ssl.
	* lftp_rl.c: fix compilation with some compilers.

2005-11-08  Alexander V. Lukyanov <lav@yars.free.net>

	* Resolver.cc: fix compilation when dn_expand is not declared (e.g. HP-UX).
	* commands.cc: fix `open -u user URL'.